# img-axum-rs

./: .gitignore  Cargo.toml  README.md  env-example
scripts/sql/: img_axum_rs.sql
src/: config.rs  err.rs  handler.rs  lib.rs  main.rs  meta.rs  state.rs  view.rs
templates/: image.html
