[package]
name = "img-axum-rs"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/img-axum-rs"
homepage = "https://img.axum.rs"
description = "axum.rs图库"


[dependencies]
tokio = { version = "1", features = ["full"]}
axum = { version = "0.6", features = ["multipart"]}
tower-http = { version = "0.4", features = ["limit"] }
config = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
xid = "1"
askama = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"]}
serde = { version = "1", features = ["derive"]}
chrono = { version="0.4", features=["serde"]}
rust-s3 = "0.33"